--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>Treebook</title>
-  
+  <%= stylesheet_link_tag    "bootstrap", :media => "all" %>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  
+  <%= stylesheet_link_tag    "statuses", :media => "all" %>
 
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag "jquery", "jquery_ujs" %>
