--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,14 @@
   <%= stylesheet_link_tag    "statuses", :media => "all" %>
 
   <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "application.js" %>
+  <%= javascript_include_tag "jquery", "jquery" %>
   <%= javascript_include_tag "jquery", "jquery_ujs" %>
+  <%= javascript_include_tag "jquery", "jquery-ui" %>
+  
+  <%= javascript_include_tag "jquery", "js-routes" %>
   <%= javascript_include_tag "statuses.js.coffee" %>
+  <%= javascript_include_tag "user_friendships.js" %>
   <%= csrf_meta_tags %>
 
 </head>
@@ -22,6 +28,7 @@
 				</ul>
 				<ul class="nav pull-right">
 					<% if user_signed_in? %>
+						<li> <%= link_to 'Friends', user_friendships_path %></li>
 						<li><%= link_to current_user.full_name, edit_user_registration_path %></li>
 						<li><%= link_to "Log Out", logout_path %></li>
 					<% else %>
@@ -41,8 +48,8 @@
                <%= message %>
            </div>
 		<% end %>
-
         
+               
 
 		<%= yield %>
 	</div>
